--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@300;400;500;600;700;800&display=swap');
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -10,7 +10,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-  background-color: #F1F6FF;
+  background-color: #333235;
 }
 html, body {
   width: 100%;
@@ -20,6 +20,7 @@ html, body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Mukta', sans-serif;
 }
 
 ul{
