--- a/src/components/ExerciseList/ExerciseList.module.scss
+++ b/src/components/ExerciseList/ExerciseList.module.scss
@@ -1,20 +1,44 @@
-.root{
-    margin-top: 20px;
+@import '@/styles/mixins.scss';
+
+.root {
+  margin-top: 20px;
+  margin-bottom: 20px;
   max-width: 80%;
-  ul{
+  .title {
+    color: #f1f1f1;
+  }
+  ul {
     margin-top: 20px;
     display: flex;
     flex-direction: column;
-    gap:30px;
-    li{
-        background-color: #fff;
-        padding: 15px;
-        border-radius: 15px;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    gap: 30px;
+    h3 {
+      font-weight: 500;
+      color: #2b2b2b;
+      font-size: 25px;
+    }
+    strong {
+      color: black;
+    }
+    li {
+      background-color: #fff;
+      border: #c0c0c0 solid 2px;
+      color: #757575;
+      padding: 25px;
+      border-radius: 15px;
+      box-shadow: 0px 4px 4px rgba(175, 173, 173, 0.397);
+      display: grid;
+      grid-template-columns: 300px 1fr;
+      .item {
         display: flex;
-        flex-direction: column;
-        gap:10px;
+        align-items: center;
+        margin-left: 30px;
+        div {
+          display: flex;
+          flex-direction: column;
+          gap: 10px;
+        }
+      }
     }
   }
-  margin-bottom: 20px;
 }
